# streamparse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  data.csv  data.ndjson
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/streamparse-cli/: Cargo.toml
crates/streamparse-cli/src/: cli.rs  lib.rs  main.rs
crates/streamparse-core/: Cargo.toml
crates/streamparse-core/benches/: throughput.rs
crates/streamparse-core/src/: buffer.rs  error.rs  event.rs  format.rs  lib.rs  parser.rs  tokenizer.rs
crates/streamparse-formats/: Cargo.toml
crates/streamparse-formats/src/: delimited.rs  lib.rs  ndjson.rs
crates/streamparse-formats/tests/: streaming_integration.rs
docs/: architecture.md
docs/adr/: 0001-push-based-parsing.md  0002-zero-copy-tokenization.md  0003-pluggable-formats.md
scripts/: build.sh  demo.sh
