[workspace]
resolver = "3"
members = [
    "crates/streamparse-core",
    "crates/streamparse-formats",
    "crates/streamparse-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Joseph Edwards <josephleonedwards@gmail.com>"]
repository = "https://github.com/leisurelyleon/streamparse"
description = "A streaming, incremental data parser that processes arbitrarily large inputs in bounded memory."

[workspace.dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
