[package]
name = "streamparse-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for streamparse."

[[bin]]
name = "streamparse"
path = "src/main.rs"

[dependencies]
streamparse-core = { path = "../streamparse-core" }
streamparse-formats = { path = "../streamparse-formats" }
clap.workspace = true
