[package]
name = "streamparse-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Push-based incremental parser engine for streamparse (no I/O)."

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "throughput"
harness = false
