[package]
name = "streamparse-formats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Concrete Format implementations for streamparse: NDJSON and delimited."

[dependencies]
streamparse-core = { path = "../streamparse-core" }
serde_json.workspace = true
